[gd_scene load_steps=2 format=3 uid="uid://d1pmrktb0ij7e"]

[ext_resource type="Script" uid="uid://rscduxtih75p" path="res://scripts/main_menu.gd" id="1_tb37y"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tb37y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="mainLayoutBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WelcomeLabel" type="Label" parent="MarginContainer/mainLayoutBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="middleRowBox" type="HBoxContainer" parent="MarginContainer/mainLayoutBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="UserInputField" type="LineEdit" parent="MarginContainer/mainLayoutBox/middleRowBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayLabel" type="Label" parent="MarginContainer/mainLayoutBox/middleRowBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ButtonCenterContainer" type="CenterContainer" parent="MarginContainer/mainLayoutBox"]
layout_mode = 2

[node name="SaveInputButton" type="Button" parent="MarginContainer/mainLayoutBox/ButtonCenterContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Save Input"

[connection signal="pressed" from="MarginContainer/mainLayoutBox/ButtonCenterContainer/SaveInputButton" to="." method="_on_save_input_button_pressed"]
